<resources>
    <string name="main_no_root">Seems you do not have root access on this device</string>
    <string name="main_dismiss">Dismiss</string>
    <string name="main_no_orbot">You must have Orbot installed!</string>
    <string name="main_no_iptables">We didn\'t found the iptables binary on this ROM… This application will not work.</string>
    <string name="main_reboot_required">
        You should reboot your device in order to ensure IPTables rules are properly applied.\n
        \n
        If you already have rebooted since orWall installation, you may have hit a bug…\n
        Please contact us on github!
        \n
        You may also want to just apply bootup rules in order to test orWall — keep in mind this MAY let some leaks!
    </string>
    <string name="main_start_iptables">Apply bootup rules</string>
    <string name="main_counter" formatted="false">%d minutes, %d seconds until end of permission.</string>
    <string name="main_end_of_browser">End of Browser bypass.</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_about">About</string>
    <string name="menu_search">Search application</string>
    <string name="menu_enable_sip">Enable SIP</string>
    <string name="menu_disable_sip">Disable SIP</string>
    <string name="menu_disable_browser">Disable browser</string>
    <string name="menu_authorize_browser">Authorize Browser</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="init_script">Init script management</string>
    <string name="summary_manage_init_script">Manage init-script (enforce or remove)</string>
    <string name="enforce_init_script">Enforce init-script</string>
    <string name="summary_enforce_init_script">Ensure the init-script is always installed, even after an Android update.</string>
    <string name="deactivate_init_script">Deactivate init-script</string>
    <string name="summary_deactivate_init_script">Check this one in order to uninstall init-script and ensure it won\'t come back. Ever.</string>
    <string name="network">Network</string>
    <string name="summary_network">Manage some network options. Beware, you may go insecure!</string>
    <string name="enable_lan">Enable LAN connections</string>
    <string name="summary_enable_lan">
        Allows LAN to bypass the firewall and Orbot.\n
        \n
        WARNING: this will allow ALL apps to access LAN. And .onion won\'t resolve anymore.
    </string>
    <string name="enable_adb">Enable Android Debug Bridge (ADB)</string>
    <string name="summary_enable_adb">Open TCP 5555 in both direction so that you may connect to your device overt network</string>
    <string name="enable_ssh">Enable SSH incoming connections</string>
    <string name="summary_enable_ssh">Opens incoming TCP 22 port so that you may connect to your device through SSH.</string>
    <string name="tethering">Tethering</string>
    <string name="enable_tethering">Enable Tethering</string>
    <string name="disable_tethering">Disable Tethering</string>
    <string name="summary_enable_tethering">Caution! Enabling this means *all* your secondary device traffic will go to the wild! That means you may get compromised!</string>
    <string name="tethering_bypass">Secondary device bypasses Orbot</string>
    <string name="summary_tethering_bypass">
        Warning! This options means: all connections from secondary device will go straight to Internet, bypassing Tor!\n
        We strongly recommend to avoid this, unless you know what you\'re doing.
    </string>
    <string name="misc">Misc</string>
    <string name="enable_polipo">Enable Polipo access</string>
    <string name="summary_enable_polipo">Caution! This will allow any app detecting Polipo port to connect to it and access freely to the Internet (through Orbot)!</string>
    <string name="captive_portal">Captive portal detection</string>
    <string name="enable_captive_detection">Enable captive portal detection</string>
    <string name="summary_enable_captive_detection">Caution! This may leads to data leakage as the OS will probe network each time you connect to the Wireless!</string>
    <string name="captive_browser_gracetime">Browser grace time in minutes (default: 5)</string>
    <string name="summary_captive_browser_gracetime">Set up grace time in order to log in captive portals. Five minutes should be enough though.</string>
    <string name="special_apps">Special applications</string>
    <string name="summary_special_apps">Select applications with special rights, like your preferred browser app for Captive Portal authentication, or VoIP.</string>
    <string name="portal_browser">Browser for Portal login</string>
    <string name="select_browser">Choose browser application</string>
    <string name="summary_select_browser">This browser will be authorized, on request, to bypass Tor in order to connect to a Captive Portal. You can activate the temporary bypass directly from the Menu.</string>
    <string name="sip_application">Choose SIP application</string>
    <string name="summary_sip_application">Selected application will see its UDP traffic allowed outside of TOR.</string>
    <string name="set_ports">Set proxy ports</string>
    <string name="summary_set_ports">Set Orbot proxy ports if you changed them in its configuration</string>
    <string name="proxy_socks">Proxy SOCKS port (Default: 9050)</string>
    <string name="proxy_transport">Transparent proxy port (Default: 9040)</string>
    <string name="proxy_dns">DNS Proxy port (Default: 5400)</string>
    <string name="proxy_polipo">Polipo port (Default: 8118)</string>
    <string name="about_urls">Project links</string>
    <string name="about_license">License</string>
    <string name="about_torproject">Unlinked to Tor Project</string>
    <string name="about_legal_tor">This product is produced independently from the Tor® anonymity software and carries no guarantee from The Tor Project about quality, suitability or anything else. </string>
    <string name="about_author">Author(s)</string>
    <string name="about_orwall">Put your apps behind Orbot and block all unwanted traffic in one go.</string>
    <string name="about_external_libs">External libraries</string>
    <string name="alert_install_script_title">Init script installation</string>
    <string name="alert_install_script_text" formatted="false">
        This application uses an init-script.\n
        This script blocks all IP communication at boot time, preventing possible leaks from your device.\n
        We strongly recommend you accept this script.\n
        \n
        Script location is %s
    </string>
    <string name="alert_install_script_accept">Install</string>
    <string name="alert_install_script_refuse">Refuse</string>
    <string name="alert_install_no_support" formatted="false">
        This application uses an init-script in %s.\n
        Unfortunately, it seems your Android device doesn\'t support it.\n
        \n
        <b>You may experience data leaks at boot time.</b>\n
        \n
        We cannot do anything against that :(.
    </string>
    <string name="tether_activated_in_orwall">Tethering activated in orWall</string>
    <string name="tether_deactivated_in_orwall">Tethering deactivated in orWall</string>
    <string name="home_enable_orwall">orWall status</string>
    <string name="enabling_orwall">orWall is being started</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="disable_orwall_title">Disable orWall?</string>
    <string name="disable_orwall_msg">You\'re going to disable orWall.\n\n
        This means your device will allow all outgoing connections. As well, outgoing connections
        will not be forced to any anonymous proxy anymore.\n
        \n
        This may be dangerous!\n
        \n
        Please keep in mind deactivation will last until next reboot.
    </string>
    <string name="alert_accept">Accept</string>
    <string name="toast_new_rule">New rules are being added</string>
    <string name="toast_remove_rule">Rules are being removed</string>
    <string name="toast_error" formatted="false">An error occurred, please contact the dev! #%d</string>
    <string name="advanced_connection_settings_title" formatted="false">Advanced settings for %s</string>
    <string name="advanced_connection_provider">Connection provider</string>
    <string name="advanced_connection_type">Connection type</string>
    <string name="advanced_connection_type_force">Force connection (using REDIRECT)</string>
    <string name="advanced_connection_type_native">Use application native capacity (Fenced path)</string>
    <string name="advanced_connection_bypass">Allow this application to bypass Proxy</string>
    <string name="alert_save">Save</string>
    <string name="alert_cancel">Cancel</string>
    <string name="start_wizard">Start Wizard</string>
    <string name="wizard_step">Step</string>
    <string name="wizard_title_one">What is orWall</string>
    <string name="wizard_title_two">Quick settings</string>
    <string name="wizard_title_three">Application settings</string>
    <string name="title_activity_wizard">Welcome to orWall</string>
    <string name="wizard_close">Close wizard</string>
    <string name="wizard_init_script_text">Init script activation:</string>
    <string name="wizard_init_root_text">Root access (read-only):</string>
    <string name="wizard_init_iptables_text">IPTables installed (read-only):</string>
    <string name="wizard_init_ipt_comments_text">Comment support in IPTables (read-only):</string>
    <string name="wizard_orbot_status_text">Orbot (read-only):</string>
    <string name="wizard_first">
        <b>Welcome to orWall!</b>\n
        This wizard will let you learn what orWall can do and what it cannot. It will also give you some
        hints on what might or might not be done.\n
        \n
        <b>orWall is not a firewall</b>\n
        Keep it in mind. orWall will not replace AFWall nor DroidWall nor anything like that.\n
        orWall main aim is to allow you forcing apps though some local proxy when those apps don\'t
        know how to talk to this proxy; it will also allow you to prevent any leaks, using an init-script.\n
        \n
        <b>How to use orWall</b>\n
        You will find three panels:\n
        - Home\n
        - Apps\n
        - Logs (which isn\'t available for now)\n
        \n
        On the Home panel, you will find some main settings.\n
        From there, you are able to deactivate orWall (until next reboot), activate Tethering support (by default,
        orWall rules block that usage), as well as give a temporary authorization to a web browser to bypass the whole proxy
        thing, enable SIP application to send UDP requests, and enable Local Area Network (LAN) connections.\n
        \n
        On the Apps panel, you will find a list of your installed applications.\n
        \n
        Bellow you will find some information about current orWall status. Note that some switches may be disabled.
        This happens if, for some reason, an option isn\'t available on your device. It is also true for read-only settings.
    </string>
</resources>