<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/network">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_adb"
            android:summary="@string/summary_enable_adb"
            android:title="@string/enable_adb" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_ssh"
            android:summary="@string/summary_enable_ssh"
            android:title="@string/enable_ssh" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/captive_portal">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_captive_portal"
            android:summary="@string/summary_enable_captive_detection"
            android:title="@string/enable_captive_detection" />
        <EditTextPreference
            android:defaultValue="@integer/browser_gracetime"
            android:inputType="number"
            android:key="browser_gracetime"
            android:summary="@string/summary_captive_browser_gracetime"
            android:title="@string/captive_browser_gracetime" />
    </PreferenceCategory>
</PreferenceScreen>