<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/init_script">
        <CheckBoxPreference
            android:disableDependentsState="true"
            android:key="enforce_init_script"
            android:title="@string/enforce_init_script"
            android:summary="@string/summary_enforce_init_script" />

        <CheckBoxPreference
            android:dependency="enforce_init_script"
            android:key="deactivate_init_script"
            android:title="@string/deactivate_init_script"
            android:summary="@string/summary_deactivate_init_script" />
        <CheckBoxPreference
            android:key="enable_lan"
            android:title="@string/enable_lan"
            android:summary="@string/summary_enable_lan" />
    </PreferenceCategory>
</PreferenceScreen>