<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="org.ethack.orwall.PreferencesActivity$NetworkPrefs"
        android:icon="@drawable/ic_action_settings"
        android:summary="@string/summary_network"
        android:title="@string/network" />

    <header
        android:fragment="org.ethack.orwall.PreferencesActivity$SpecialApps"
        android:icon="@drawable/ic_action_settings"
        android:summary="@string/summary_special_apps"
        android:title="@string/special_apps" />

    <header
        android:fragment="org.ethack.orwall.PreferencesActivity$ProxyPorts"
        android:icon="@drawable/ic_action_settings"
        android:summary="@string/summary_set_ports"
        android:title="@string/set_ports" />

</preference-headers>