<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp">
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/orwall_status"
        android:text="@string/home_enable_orwall"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/tethering_status"
        android:text="@string/enable_tethering"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/browser_status"
        android:text="@string/menu_authorize_browser"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/sip_status"
        android:text="@string/menu_enable_sip"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/lan_status"
        android:text="@string/enable_lan"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled" />
        <Space
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
        <!--
        This part will give hints regarding orWall status.
        It's, more or less, the same thing we will see in the wizard first page.
         -->
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard_init_script_text"
            android:id="@+id/status_initscript"/>
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard_init_root_text"
            android:enabled="false"
            android:id="@+id/status_root" />
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard_init_iptables_text"
            android:enabled="false"
            android:id="@+id/status_iptables" />
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard_init_ipt_comments_text"
            android:enabled="false"
            android:id="@+id/status_ipt_comments" />
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard_orbot_status_text"
            android:enabled="false"
            android:id="@+id/status_orbot"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/id_about"
            android:text="@string/menu_action_about"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/id_wizard"
            android:text="@string/start_wizard"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/id_settings"
            android:text="@string/menu_action_settings" />
    </RelativeLayout>
</LinearLayout>
