<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:showAsAction="always|collapseActionView"
        android:title="" />

    <item
        android:id="@+id/authorize_browser"
        android:enabled="false"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_authorize_browser" />

    <item
        android:id="@+id/disable_browser"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_disable_browser"
        android:visible="false" />

    <item
        android:id="@+id/enable_sip"
        android:enabled="false"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_enable_sip" />
    <item
        android:id="@+id/disable_sip"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_disable_sip"
        android:visible="false" />

    <item
        android:id="@+id/enable_tethering"
        android:enabled="false"
        android:icon="@drawable/ic_action_secure"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/enable_tethering"
        android:visible="true" />
    <item
        android:id="@+id/disable_tethering"
        android:icon="@drawable/ic_action_secure"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/disable_tethering"
        android:visible="false" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="9"
        android:showAsAction="ifRoom"
        android:title="@string/menu_action_settings" />

    <item
        android:id="@+id/action_select_all"
        android:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/menu_select_all" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/menu_action_about" />
</menu>
